--- a/Ascii the Barbarian/Ascii the Barbarian.csproj
+++ b/Ascii the Barbarian/Ascii the Barbarian.csproj
@@ -51,13 +51,14 @@
     <Compile Include="GenericAudioComponent.cs" />
     <Compile Include="GenericPhysicsComponent.cs" />
     <Compile Include="GenericGraphicsComponent.cs" />
+    <Compile Include="Graph.cs" />
+    <Compile Include="GraphAlgorithmSolver.cs" />
     <Compile Include="IAudioComponent.cs" />
     <Compile Include="IControllerComponent.cs" />
     <Compile Include="IGraphicsComponent.cs" />
     <Compile Include="IObserver.cs" />
     <Compile Include="IPhysicsComponent.cs" />
     <Compile Include="Level.cs" />
-    <Compile Include="ICreator.cs" />
     <Compile Include="NullAudioComponent.cs" />
     <Compile Include="NullControllerComponent.cs" />
     <Compile Include="NullPhysicsComponent.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="PlayerControllerComponent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RatControllerComponent.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
