--- a/Ascii the Barbarian/Ascii the Barbarian.csproj
+++ b/Ascii the Barbarian/Ascii the Barbarian.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ArrowControllerComponent.cs" />
     <Compile Include="AsciiPhysicsComponent.cs" />
+    <Compile Include="DoubleGraphicsBuffer.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="GameObjectFactory.cs" />
     <Compile Include="GazeControllerComponent.cs" />
@@ -57,7 +58,6 @@
     <Compile Include="IObserver.cs" />
     <Compile Include="IPhysicsComponent.cs" />
     <Compile Include="Level.cs" />
-    <Compile Include="ICreator.cs" />
     <Compile Include="NullAudioComponent.cs" />
     <Compile Include="NullControllerComponent.cs" />
     <Compile Include="NullPhysicsComponent.cs" />
@@ -65,6 +65,7 @@
     <Compile Include="PlayerControllerComponent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RatControllerComponent.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
